--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
     /*background: linear-gradient(to right, #ff105f, #ffad06); /* took this from my login-form. No longer using this as I found a beautiful background img.*/
-    background-image: url(/images/sky.png);
+    background-image: url(images/sky.png);
     background-size: cover; /*This property/value pair tells the browser to scale the background image proportionally so that its width and height are equal to, or greater than, the width/height of the element. - Per https://www.webfx.com/blog/web-design/responsive-background-image/ */
     background-position-x: center; /*incase the img gets scaled up and get distorted (height and width), this will keep it center*/
     background-position-y: center; /*incase the img gets scaled up and get distorted (height and width), this will keep it center*/
